--- a/libs/neural-network/Cargo.toml
+++ b/libs/neural-network/Cargo.toml
@@ -2,3 +2,8 @@
 name = "lib-neural-network"
 version = "0.1.0"
 edition = "2021"
+
+[dependencies]
+approx = "0.5.1"
+rand = "0.8.5"
+rand_chacha = "0.3.1"
