--- a/libs/simulation-wasm/Cargo.toml
+++ b/libs/simulation-wasm/Cargo.toml
@@ -7,4 +7,7 @@ edition = "2021"
 crate-type = ["cdylib"]
 
 [dependencies]
+rand = "0.8.5"
+getrandom = { version = "0.2.15", features = ["js"] }
 wasm-bindgen = "0.2.100"
+lib-simulation = { path = "../simulation/" }
