eye logic for the animal(bird) implemented

--- a/libs/simulation/Cargo.toml
+++ b/libs/simulation/Cargo.toml
@@ -4,5 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+lib-neural-network ={path = "../neural-network"}
 nalgebra = { version = "0.33.2", features = ["rand-no-std"] }
 rand = "0.8.5"
+
+[dev-dependencies]
+test-case = "3.3.1"
