--- a/libs/simulation-wasm/Cargo.toml
+++ b/libs/simulation-wasm/Cargo.toml
@@ -2,6 +2,9 @@
 name = "lib-simulation-wasm"
 version = "0.1.0"
 edition = "2021"
+description = "A wasm-library"
+license = "MIT"
+repository = "https://github.com/emre-ergun/how-to-fly.git"
 
 [lib]
 crate-type = ["cdylib"]
