--- a/www/package.json
+++ b/www/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "lib-simulation-wasm": "file:../libs/simulation-wasm/pkg",
     "vite": "^6.0.5",
+    "vite-plugin-top-level-await": "^1.5.0",
     "vite-plugin-wasm": "^3.4.1"
   }
 }
